# ChatCaht

./: .gitignore  README.md  pyproject.toml
.claude/: launch.json
configs/: config.example.yaml  config.yaml
dashboard/: README.md  server.py
dashboard/static/: index.html
src/chatcaht/: __init__.py  assets.py  audio.py  audio_runtime.py  cli.py  config.py  health.py  lmstudio.py  logging.py  metrics.py  models.py  openai_client.py  orchestrator.py  selftest.py  service_manager.py  supervisor.py
src/chatcaht/adapters/: llm.py  stt.py  tts.py  wake.py
stack/: README.md  models.manifest.yaml  stack.yaml
tests/: test_audio_runtime.py  test_cli.py  test_config.py  test_health_contract.py  test_llm_ws.py  test_long_running.py  test_orchestrator.py  test_service_manager.py  test_status_announce.py  test_stt_ws.py  test_supervisor.py  test_tts_ws.py  test_wake_ws.py
