[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatcaht"
version = "0.1.0"
description = "Full-duplex wake-word AI voice chat orchestrator for local LM Studio, WakeUp/Wakord, SpText, and GVoice"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "SlowFeather" }]
dependencies = [
    "httpx>=0.27",
    "numpy<2",
    "psutil>=6",
    "pyyaml>=6",
    "sounddevice",
    "websockets>=12",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff>=0.12", "mypy>=1.16", "pip-audit>=2.9"]

[project.scripts]
chatcaht = "chatcaht.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120

[tool.mypy]
files = ["src/chatcaht/config.py", "src/chatcaht/models.py", "src/chatcaht/metrics.py", "src/chatcaht/assets.py"]
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
follow_imports = "skip"
